--- a/style.css
+++ b/style.css
@@ -1,54 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 
-body {
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
+:root {
+    --white: hsl(0, 0%, 100%);
+    --light-gray: hsl(212, 45%, 89%);
+    --grayish-blue: hsl(220, 15%, 55%);
+    --dark-blue: hsl(218, 44%, 22%);
+    --outfit: 'Outfit';
+}
+
+* {
     margin: 0;
     padding: 0;
-    background-color: hsl(212, 45%, 89%);
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Outfit';
     box-sizing: border-box;
 }
 img {
-    width: 295px;
-    border-radius: 10px;
     display: block;
+    max-width: 100%;
+    border-radius: 10px;
 }
-.container {
-    background-color: hsl(0, 0%, 100%);
-    height: 500px;
-    width: 330px;
-    border-radius: 20px;
+
+body {
+    background-color: var(--light-gray);
+    max-width: 100%;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
- }
- .header {
+}
+.container {
+    background-color: var(--white);
+    max-width: 320px;
+    height: 500px;
+    padding: 1rem;
+    border-radius:15px;
+}
+h2 {
+    font-size: 1.36rem;
+    text-align: center;
+    font-family: var(--outfit);
     font-weight: 700;
-    font-size: 1.35rem;
-    margin-top: 0.3rem;
-    margin-bottom: 0.5rem;
-    width: 260px;
-    color: hsl(218, 44%, 22%);
-  
- }
- .main {
+    margin-top: 1.5rem;
+    color: var(--dark-blue);
+}
+p {
+    font-family: var(--outfit);
+    margin-top: 1rem;
     font-weight: 400;
     text-align: center;
-    margin-top: 0.5rem;
-    margin-bottom: 2.5rem;
-    font-size: 15px;
-    color: hsl(220, 15%, 55%);
-
-  }
-p {
-    width: 300px;
-    text-align: center;
-}
-p.main {
-    width: 260px;
+    font-size: 1rem;
+    padding: 0 0.5rem;
+    color: var(--grayish-blue);
 }
